// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbyFixtures should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dEqLmD"
  >
    <div
      class="sc-htpNat sc-ifAKCX lpnzvL"
    />
    <div
      class="sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbyFixtures should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dEqLmD"
  >
    <div
      class="sc-htpNat sc-ifAKCX lpnzvL"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
